--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,9 +26,14 @@ tokio = { version = "1", features = ["full"] }
 tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
 postgres-native-tls = "0.5"
 native-tls = "0.2"
+mysql_async = "0.34"
+async-trait = "0.1"
+base64 = "0.22"
 uuid = { version = "1", features = ["serde", "v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1"
 parking_lot = "0.12"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "stream"] }
+futures-util = "0.3"
 machine-uid = "0.5"
+libsql = { version = "0.9", default-features = false, features = ["remote"] }
