--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.7",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "@types/ms": "^2.1.0",
     "@upstash/realtime": "^1.0.0",
     "@upstash/redis": "^1.36.1",
     "better-auth": "^1.4.10",
@@ -63,6 +64,7 @@
     "hono": "^4.11.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
+    "ms": "^2.1.3",
     "next-themes": "^0.4.6",
     "nitro": "latest",
     "postgres": "^3.4.8",
