--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,3 +37,4 @@ reqwest = { version = "0.12", features = ["json", "stream"] }
 futures-util = "0.3"
 machine-uid = "0.5"
 libsql = { version = "0.9", default-features = false, features = ["remote"] }
+hostname = "0.4"
