--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,3 +38,7 @@ futures-util = "0.3"
 machine-uid = "0.5"
 libsql = { version = "0.9", default-features = false, features = ["remote"] }
 hostname = "0.4"
+tauri-plugin-process = "2"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
