--- a/.github/workflows/release-and-build.yml
+++ b/.github/workflows/release-and-build.yml
@@ -88,5 +88,4 @@ jobs:
           gh release create ${{ github.event.release.tag_name }} ./assets/* \
             --repo lassejlv/querystudio-releases \
             --title "${{ github.event.release.name }}" \
-            --notes "${{ github.event.release.body }}" \
-            --verify-tag
+            --notes "${{ github.event.release.body }}"
