Update ignore list and remove web vscode settings

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -5,5 +5,9 @@
     ".tanstack",
     ".git",
     "tsconfig.node.json",
+    ".vscode",
+    ".cursor",
+    ".output",
+    "node_modules",
   ],
 }
