--- a/package.json
+++ b/package.json
@@ -41,49 +41,49 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.16",
-    "@tanstack/react-router": "^1.146.2",
-    "@tanstack/react-router-devtools": "^1.146.2",
+    "@tanstack/react-router": "^1.147.3",
+    "@tanstack/react-router-devtools": "^1.149.0",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-opener": "^2.5.3",
-    "@tauri-apps/plugin-process": "~2",
-    "@tauri-apps/plugin-updater": "~2",
+    "@tauri-apps/plugin-process": "~2.3.1",
+    "@tauri-apps/plugin-updater": "~2.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.25.0",
+    "framer-motion": "^12.26.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
-    "react-hook-form": "^7.70.0",
+    "react-hook-form": "^7.71.0",
     "react-markdown": "^10.1.0",
-    "react-resizable-panels": "^4.3.3",
+    "react-resizable-panels": "^4.4.0",
     "react-syntax-highlighter": "^16.1.0",
-    "recharts": "2.15.4",
+    "recharts": "3.6.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vaul": "^1.1.2",
     "zod": "^4.3.5",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
-    "@tanstack/router-plugin": "^1.146.3",
+    "@tanstack/router-plugin": "^1.149.0",
     "@tauri-apps/cli": "^2.9.6",
-    "@types/node": "^25.0.3",
-    "@types/react": "^19.2.7",
+    "@types/node": "^25.0.6",
+    "@types/react": "^19.2.8",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@vitejs/plugin-react": "^4.7.0",
-    "oxlint": "^1.38.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "oxlint": "^1.39.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "~5.8.3",
-    "vite": "npm:rolldown-vite@latest"
+    "typescript": "~5.9.3",
+    "vite": "npm:rolldown-vite@^7.3.1"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@latest"
