--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -40,6 +40,7 @@ libsql = { version = "0.9", default-features = false, features = ["remote"] }
 hostname = "0.4"
 tauri-plugin-process = "2"
 portable-pty = "0.8"
+sysinfo = "0.30"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
