Redis and SQlite Support

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,6 +44,7 @@ sysinfo = "0.30"
 tauri-plugin-deep-link = "2"
 tauri-plugin-http = "2"
 tauri-plugin-os = "2"
+redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
