--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,7 +23,11 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
-tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
+tokio-postgres = { version = "0.7", features = [
+  "with-serde_json-1",
+  "with-uuid-1",
+  "with-chrono-0_4",
+] }
 postgres-native-tls = "0.5"
 native-tls = "0.2"
 mysql_async = "0.34"
@@ -44,7 +48,11 @@ sysinfo = "0.30"
 tauri-plugin-deep-link = "2"
 tauri-plugin-http = "2"
 tauri-plugin-os = "2"
-redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
+redis = { version = "0.27", features = [
+  "tokio-comp",
+  "connection-manager",
+  "tokio-native-tls-comp",
+] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
