--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -53,6 +53,7 @@ redis = { version = "0.27", features = [
   "connection-manager",
   "tokio-native-tls-comp",
 ] }
+mongodb = "3"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
