--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
-    "@tanstack/react-query": "^5.90.19",
-    "@tanstack/react-router": "^1.151.0",
-    "@tanstack/react-router-devtools": "^1.151.0",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-router": "^1.156.0",
+    "@tanstack/react-router-devtools": "^1.156.0",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-deep-link": "~2.4.6",
     "@tauri-apps/plugin-http": "~2.5.6",
@@ -55,13 +55,13 @@
     "@xterm/addon-fit": "0.10.0",
     "@xterm/addon-web-links": "0.11.0",
     "@xterm/xterm": "5.5.0",
-    "better-auth": "^1.4.14",
+    "better-auth": "^1.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
-    "framer-motion": "^12.26.2",
+    "framer-motion": "^12.29.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "next-themes": "^0.4.6",
@@ -70,7 +70,7 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
-    "react-resizable-panels": "^4.4.1",
+    "react-resizable-panels": "^4.4.2",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "3.6.0",
     "remark-gfm": "^4.0.1",
@@ -78,23 +78,20 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "vaul": "^1.1.2",
-    "zod": "^4.3.5",
+    "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
-    "@tanstack/router-plugin": "^1.151.0",
+    "@tanstack/router-plugin": "^1.156.0",
     "@tauri-apps/cli": "^2.9.6",
-    "@types/node": "^25.0.9",
-    "@types/react": "^19.2.8",
+    "@types/node": "^25.0.10",
+    "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.2",
-    "oxlint": "^1.39.0",
+    "oxlint": "^1.41.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@^7.3.1"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@latest"
+    "vite": "latest"
   }
 }
