--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tauri-apps/plugin-opener": "^2.5.3",
     "@tauri-apps/plugin-os": "~2.3.2",
     "@tauri-apps/plugin-process": "~2.3.1",
+    "@tauri-apps/plugin-sql": "~2",
     "@tauri-apps/plugin-updater": "~2.9.0",
     "@xterm/addon-canvas": "^0.7.0",
     "@xterm/addon-fit": "0.10.0",
@@ -89,6 +90,7 @@
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "oxlint": "^1.41.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
