--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "querystudio",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsgo --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
     "lint": "oxlint ./src/*.ts"
@@ -91,9 +91,11 @@
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@typescript/native-preview": "^7.0.0-dev.20260129.1",
     "@vitejs/plugin-react": "^5.1.2",
     "babel-plugin-react-compiler": "^1.0.0",
-    "oxlint": "^1.41.0",
+    "oxfmt": "^0.27.0",
+    "oxlint": "^1.42.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@latest"
