--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -52,6 +52,7 @@ redis = { version = "0.27", features = [
   "tokio-comp",
   "connection-manager",
   "tokio-native-tls-comp",
+  "cluster-async",
 ] }
 mongodb = "3"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
