--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,6 +38,7 @@ portable-pty = "0.8"
 sysinfo = "0.30"
 tauri-plugin-deep-link = "2"
 tauri-plugin-http = "2"
+tauri-plugin-single-instance = "2"
 tauri-plugin-os = "2"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 querystudio-providers = { path = "../crates/providers" }
